2014-05-27:
	* (seebs) start noticing umask, mask it out from open or mkdir
	  calls rather than relying on underlying open/mkdir to do it.
	* (seebs) add a test for umask and filesystem-vs-db modes.

2014-05-16:
	* (seebs) fchmodat: don't drop flags, report failures, to improve
	  compatibility/consistency. Cache the knowledge that
	  AT_SYMLINK_NOFOLLOW gets ENOTSUP.
	* (seebs) mask out group/other write bits in real filesystem to
	  reduce risks when assembling a rootfs including world-writeable
	  directories.
	* (seebs) send a round-trip message to the server before exiting
	  if any messages have been sent, so the program won't exit before
	  the server processed those messages.
	* (pabigot) Don't memory-leak on checks for PSEUDO_UNLOAD, also
	  check the correct environment when spawning new things. (Contributed
	  by Peter A. Bigot).
	* (seebs) mask 022 back in too, when restoring a database mode.

2014-05-15:
	* (seebs) drop flags when calling fchmodat() to appease GNU tar.

2014-04-24:
	* (seebs) extended attribute support

2014-01-23:
	* (seebs) mknod wasn't calling mknodat.
	* (seebs) mkdirat wasn't recording the logical DB mode for directories

2014-01-22:
	* (seebs) notes on some Futures planning.
	* (seebs) Typo/formatting issue in man page.
	* (seebs) message formatting/clarity cleanup and typo fixes.
	* (seebs) First draft of passwd_fallback implementation.
	* (seebs) bump this all to 1.6.0.

2014-01-15:
	* (seebs) performance test/test case updates.

2013-06-20:
	* (seebs) refactor debugging code
	* (seebs) start using 1.5.2 numbering

2013-06-18:
	* (seebs) Fix bug in oldclone (reported by rich@noir.com).

2013-02-27:
	* (seebs) Oh, hey, what if I took out my debug messages?
	* (seebs) update docs a bit to reduce bitrot

2013-02-26:
	* (seebs) When built -DNDEBUG, completely drop pseudo_debug calls.
	* (seebs) Add PSEUDO_ALLOW_FSYNC to allow temporary re-enabling of
	  fsync to work around filesystem bugs.
	* (seebs) call that 1.5.1.

2013-02-17: